--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-validation": "^3.0.7",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
