--- a/kubernetes/deployment.yml
+++ b/kubernetes/deployment.yml
@@ -1,20 +1,20 @@
-apiVersion: apps/v1 # Usa apps/v1beta2 para versiones anteriores a 1.9.0
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: sipfront
+  name: sip-front
 spec:
   selector:
     matchLabels:
-      app: sipfront
-  replicas: 5 # Actualiza el número de réplicas de 2 a 4
+      app: sip-front
+  replicas: 5
   template:
     metadata:
       labels:
-        app: sipfront
+        app: sip-front
     spec:
       containers:
-      - name: sipfront
-        image: dpetrocelli/sipfront:latest
+      - name: sip-front
+        image: gcr.io/sip-unlu-2022/sipfront:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 80
