--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   },
   "devDependencies": {
     "axios-logger": "^2.6.0",
+    "jest": "^28.1.0",
     "redux-devtools-extension": "^2.13.9"
   }
 }
