--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.6.4",
+    "@heroicons/react": "^1.0.6",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
@@ -50,8 +52,11 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.7",
     "axios-logger": "^2.6.0",
     "jest": "^28.1.0",
-    "redux-devtools-extension": "^2.13.9"
+    "postcss": "^8.4.14",
+    "redux-devtools-extension": "^2.13.9",
+    "tailwindcss": "^3.0.24"
   }
 }
