--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "http-proxy-middleware": "^2.0.4",
     "js-cookie": "^3.0.1",
+    "mercadopago": "^1.5.13",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.8",
